--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,33 @@
 title: Društvo Fršlus
-description: Društvo Fršlus je LGBTQ+ organizacija, ki deluje na območju Pomurja.
+email: drustvofrslus@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Društvo Fršlus je LGBTQ+ organizacija, ki deluje na območju Pomurja.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+instagram_username: drustvo_frslus
+facebook_username:  "61552108473588"
 
-theme: minima  # Specifies a Jekyll theme
-paginate: 5  # Number of posts per page if using pagination
-
+# Build settings
+theme: minima
 plugins:
-  - jekyll-feed  # Generates an RSS feed
-  - jekyll-seo-tag  # Adds SEO meta tags
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
