added wrapper borders, fixed mobile menu button animation, (possibly) fixed logo button acting as home button

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,13 @@ instagram_username: drustvo_frslus
 facebook_username:  "61552108473588"
 tiktok_username: drustvo_frslus
 
+header_pages:
+  - index.md
+  - novice.md
+  - about.md
+  - contact.md
+
+
 # Build settings
 theme: minima
 plugins:
