--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: drustvo_frslus
 facebook_username:  "61552108473588"
 tiktok_username: drustvo_frslus
+linktree_username: drustvofrslus
 
 header_pages:
   - index.md
