Revamp home page, added new sites, changed logo

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ linktree_username: drustvofrslus
 header_pages:
   - index.md
   - novice.md
+  - aktivnosti.md
+  - lgbtinromi.md
+  - publikacije.md
   - about.md
   - contact.md
 
